    - JDB support.  DDD now also supports JDB as inferior debugger.
      All important JDB features are available via the GUI.
    - Java support.  Requires GDB 4.17 or later (or JDB, of course).
      All data display features are available in Java.
    - Watchpoints.  You can have the debugged program stop
      automatically whenever a particular variable is read or written.
    - KDE-style key bindings.  See below for details.
    - Deferred displays.  DDD now can maintain displays whose creation
      is deferred until a particular scope is entered.  Benefits:
      * Displays are now persistent across recompilations.
      * In sessions, displays can also be restored without core dump.
    - Tear-off menus are supported (and enabled by default).
    - Breakpoint properties.  There is an editor panel to set and
      change all properties for a breakpoint at once.  See
      `Source->Edit Breakpoints->Properties' for details.
    - Breakpoint commands.  Using GDB, you can record and edit
      commands to be executed when a breakpoint is reached.
    - User-defined commands.  Using GDB, you can record and edit new
      commands and assign them to buttons; see `Commands->Define
      Command'.  All commands are saved across DDD sessions.
    - Conditional breakpoints, temporary breakpoints, and breakpoints
      with ignore counts now have their special symbols on their own.
    - On popular demand, the command tool has `until' and `make' buttons.
    - When detecting a grabbed (frozen) mouse pointer after reaching a
      breakpoint, DDD now automatically continues execution, rather
      than attempting to ungrab the pointer.
    - Improved help system.  In accordance with the Motif style guide,
      the F1 key invokes help on the item pointed at; Shift+F1 lets
      you choose an item.
    - Tips of the day.  Upon startup, DDD shows a useful hint for DDD usage.
    - Value tips and selections now work for struct members, too: you